# TrabajoFinalCG

./: CMakeLists.txt  Controles.h  build_ultimo.ps1  calibration.yml  calibration1.yml  main.cpp
LibPuntoGL/: Figura.h  KDTreeGL.h  Punto.h  PuntoGL.h  Triangulo.h
Nueva carpeta/: Project1.fix_prj  Project1_scan_1.rge  Project1_scan_2.rge  Project1_scan_3.rge  Project1_scan_4.rge  Project1_scan_5.rge  Project1_scan_6.rge  Project1_scan_7.rge  Project1_scan_8.rge
Prueba2/: Escanear_Project1_scan_1.asc  Escanear_Project1_scan_2.asc  Escanear_Project1_scan_3.asc  Escanear_Project1_scan_4.asc  Escanear_Project1_scan_5.asc  Escanear_Project1_scan_6.asc  Escanear_Project1_scan_7.asc  Escanear_Project1_scan_8.asc
Qilin/: qilin.mtl
src/: calibracion_imagen.cpp  calibrate_camara.cpp  prototipoFinal.cpp
